--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "healthcare-monitoring-system",
+  "name": "nuxt-app",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "HOST=0.0.0.0 nuxt dev",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "websocket": "node server/websocket-server.js",
+    "dev:full": "concurrently \"npm run websocket\" \"npm run dev\""
   },
   "dependencies": {
+    "@nuxt/ui": "^2.18.7",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@vueuse/nuxt": "^11.1.0",
     "nuxt": "^3.13.0",
-    "@nuxt/ui": "^2.11.1",
-    "@supabase/supabase-js": "^2.38.4",
-    "chart.js": "^4.4.1",
-    "vue-chartjs": "^5.3.0",
-    "socket.io-client": "^4.7.4",
-    "@vueuse/nuxt": "^10.7.1",
-    "date-fns": "^3.2.0",
-    "@nuxtjs/google-fonts": "^3.0.2"
+    "vue": "latest",
+    "ws": "^8.18.0",
+    "concurrently": "^8.2.2"
   }
 }
