--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "websocket": "node server/websocket-server.js",
+    "websocket": "node server/websocket-server.cjs",
     "dev:full": "concurrently \"npm run websocket\" \"npm run dev\""
   },
   "dependencies": {
