--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^3.13.0",
     "vue": "latest",
     "ws": "^8.18.0",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "date-fns": "^3.6.0"
   }
 }
