--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "latest",
     "ws": "^8.18.0",
     "concurrently": "^8.2.2",
-    "date-fns": "^3.6.0"
+    "date-fns": "^3.6.0",
+    "chart.js": "^4.4.0"
   }
 }
