--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: healthcare-backend
     env: node
-    buildCommand: cd backend && npm ci && npx prisma generate && npm run build
+    buildCommand: npm ci && cd backend && npm ci && npx prisma generate && npm run build
     startCommand: cd backend && npx prisma migrate deploy && npm run start:prod
     envVars:
       - key: NODE_ENV
